# smart-car

./: .mxproject  .project  CMakeLists.txt  Makefile  Readme.md  smart_car.ioc
Cmake/: stm32-gcc-flags.cmake  target-def.cmake
Doc/: Fast RTPS.md  OpenCV.md  Raspberry Pi 4B.md  在 Ubuntu 下开发 STM32.md
Drivers/CMSIS/: CMakeLists.txt  cmsis.mk
Drivers/MPU6050/: CMakeLists.txt
Drivers/MPU6050/driver/eMPL/: inv_mpu.c  inv_mpu_dmp_motion_driver.c  inv_mpu_dmp_motion_driver.h
Drivers/MPU6050/driver/stm32L/: log_stm32.c
Drivers/STM32F1xx_HAL_Driver/: CMakeLists.txt
Inc/: i2c.h  main.h  mpu6050_dmp.h  mpu6050_hw.h  retarget.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  sys_tick.h  usart.h
Script/camera/: calibrate.py  face_detector.py  orb_slam2.py  pic_capture.py  pic_capture_stream.py  pic_service.py  rbp4b_fast_depth_tvm.py  test.py  tools.py
Script/camera/old/: client.py  orb_slam2.py  sever.py
Script/camera/tvm_depth_compiled/rbp4b_cpu_mobilenet_nnconv5dw_skipadd_pruned/: deploy_graph.json  deploy_lib.tar
Script/camera/tvm_depth_compiled/tx2_cpu_mobilenet_nnconv5dw_skipadd_pruned/: deploy_graph.json  deploy_lib.tar
Script/control/: controller.py  joystick_test.py
Script/launch/: camera_stream_launch.sh  controller_launch.sh  socket_slam_test.sh
Script/mpu6050/: eMPL-client.py  ponycube.py
Script/tvm_compiler/fast_depth/: autotvm_compiler.py  tvm_compiler.py
Src/: exti.c  gpio.c  i2c.c  main.c  mpu6050_dmp.c  mpu6050_hw.c  retarget.c  stm32f1xx_it.c  sys_tick.c  tim.c  usart.c
